--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><Jean Carlos/></title>
   </head>
-  <body>
+  <body class="min-vh-100">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
